--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,5 @@ $RECYCLE.BIN/
 *.swp
 API/appsettings.json
 API/appsettings.Development.json
+Infrastructure/Data/SeedData/delivery.json
+Infrastructure/Data/SeedData/products.json
