--- a/.gitignore
+++ b/.gitignore
@@ -486,3 +486,4 @@ API/appsettings.json
 API/appsettings.Development.json
 Infrastructure/Data/SeedData/delivery.json
 Infrastructure/Data/SeedData/products.json
+.vscode/launch.json
